Tests/ModulesExampleDirectory/InvalidModuleExample/AModuleNotImplementParentGetInfo.php
<?php
declare(strict_types=1);

namespace Pentagonal\Modular\Test\ModuleExampleDirectory;

use Pentagonal\Modular\Module;

/**
 * Class AModuleNotImplementParentGetInfo
 * @package Pentagonal\Modular\Test\ModuleExampleDirectory
 */
class AModuleNotImplementParentGetInfo extends Module
{
}
